apps/websockets/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: <NAMESPACE>
  name: websockets-deployment
  labels:
    app: synple-websockets
spec:
  replicas: 1
  selector:
    matchLabels:
      app: synple-websockets
  template:
    metadata:
      labels:
        app: synple-websockets
    spec:
      dnsPolicy: Default
      containers:
        - name: synple-websockets
          image: virtuatable/modusynth-websockets:<VERSION>
          args:
            - web
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 500m
              memory: 128Mi
