apps/websockets/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: <NAMESPACE>
  name: websockets-service
  labels:
    app: synple-websockets
spec:
  selector:
    app: synple-websockets
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
    - name: https
      protocol: TCP
      port: 443
      targetPort: 3000
