apps/websockets/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: <NAMESPACE>
  name: websockets-ingress
  labels:
    app: synple-websockets
spec:
  tls:
    - secretName: synple-certificates
  rules:
    - http:
        paths:
          - path: <PATH>
            pathType: Prefix
            backend:
              service:
                name: websockets-service
                port:
                  number: 80
